contrib/awssqs/config/500-controller.yaml
# Copyright 2019 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    contrib.eventing.knative.dev/release: devel
    control-plane: awssqs-controller-manager
  name: awssqs-controller-manager
  namespace: knative-sources
spec:
  selector:
    matchLabels:
      control-plane: awssqs-controller-manager
  serviceName: awssqs-controller-manager
  template:
    metadata:
      labels:
        control-plane: awssqs-controller-manager
    spec:
      containers:
      - image: knative.dev/eventing-contrib/contrib/awssqs/cmd/controller
        name: manager
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
          requests:
            cpu: 20m
            memory: 20Mi
      serviceAccount: awssqs-controller-manager
      terminationGracePeriodSeconds: 10
